# ytr

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: client.rs  error.rs  lib.rs  request.rs  response.rs
src/client/: mod.rs  tests.rs
src/response/: mod.rs  tests.rs
tests/: integration.rs
